--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.6",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
+    "react-advanced-cropper": "^0.20.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-image-file-resizer": "^0.4.8",
